@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tk.h,v 1.57 2001/09/26 20:25:17 pspjuth Exp $
+ * RCS: @(#) $Id: tk.h,v 1.58 2002/03/06 15:36:17 dkf Exp $
  */
 
 #ifndef _TK
@@ -48,10 +48,10 @@ extern "C" {
 #define TK_MAJOR_VERSION   8
 #define TK_MINOR_VERSION   4
 #define TK_RELEASE_LEVEL   TCL_ALPHA_RELEASE
-#define TK_RELEASE_SERIAL  4
+#define TK_RELEASE_SERIAL  5
 
 #define TK_VERSION	"8.4"
-#define TK_PATCH_LEVEL	"8.4a4"
+#define TK_PATCH_LEVEL	"8.4a5"
 
 /*
  * The following definitions set up the proper options for Macintosh
